2009-03-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Subversion/SvnClient.cs: worked
	  on messages.

2009-03-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Subversion/SvnClient.cs: Handled
	  commit delta message.

2009-03-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.VersionControl.Subversion/SvnClient.cs: Improved
	  subversion notify messages (taken some logic out of the
	  subversion implementation).

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Subversion.addin.xml: Restore
	  accidentally removed menu extension.

2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Flush.

2009-02-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Subversion.addin.xml: Track merge
	  of the project pad context menu.

2009-02-19  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.VersionControl.Subversion.csproj:
	* MonoDevelop.VersionControl.Subversion.dll.config: Add a
	  dllmap for the Mac. Config patch from Kris Ray.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.VersionControl.Subversion.csproj: Don't
	  local-copy other addins' dlls.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.VersionControl.Subversion.csproj: Flush MD's
	  removal of newline at end of file that was introduced by
	  manually editing with gedit.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.VersionControl.Subversion.csproj: Remove invalid
	  ApplicationIcon value that broke the build in VS.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Subversion.mdp:
	* MonoDevelop.VersionControl.Subversion.csproj: Migrated to
	  MSBuild file format.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.VersionControl.Subversion.addin.xml: Bump MD
	  version.
